[FIX]: web-ui: admin/AdminApp Fixed navigation bar overflow issue

--- a/packages/web-ui/src/admin/AdminApp/index.less
+++ b/packages/web-ui/src/admin/AdminApp/index.less
@@ -81,6 +81,8 @@
         border-bottom: 1px solid @lib-border-gray;
 
         > .navigator-bar.ant-tabs-card {
+            min-width: 0;
+
             > .ant-tabs-nav {
                 margin: 0;
 
